test/libsolidity/syntaxTests/inlineAssembly/function_definition_whitespace.sol
contract C {
  function f() pure public {
    assembly {
      function f (a, b  , c ) -     >    y,x,z {
      }
    }
  }
}
// ----
// ParserError 2314: (87-88): Expected '{' but got '-'
